always show scrollbar to prevent content jumping around

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -5,6 +5,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   align-items: center;
+  overflow-y: scroll;
 }
 
 main {
